fix: add missing mocks for TransactionCalculationService, ReportService generators, SecurityContext in 9 test files (659/659 PASS)